2011-01-25  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Enable global-hl-line-mode in terminal.
	: Enable xterm-mouse-mode for putty.
	: Support mouse scroll in terminal.

	* init-misc.el: Enable highlight-symbol-mode in terminal.

2011-01-19  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (flymake-no-changes-timeout): Change from 0.5 to 5.0

2011-01-17  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (flymake-master-make-cc-init): Fix a flymake bug.

2011-01-13  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: highlight-symbol-face's background set to gray83(eclipse).

	* init-site.el: Fix a bug for ede-cpp-root-project when not
	install global.

2011-01-10  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Don't enable flymake in default.

2010-12-21  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (shell-mode-hook): Enable
	ansi-color-for-comint-mode for shell-mode.
	: Enable winner-mode for window configuration.

2010-12-15  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Small changes for flymake python.

2010-12-13  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Small changes for flymake toolbar.

	* init-basic.el: Small changes for flymake.

2010-12-12  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Check C/C++ compile when startup.
	: Add elisp and shell support for flymake.
	Disable FlymakeElisp because ede-projects.el error when startup.

2010-12-11  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Flymake now support clang.

2010-12-08  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Flymake both support vc6 and vc2010.

2010-12-07  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Flymake now support vc.

	* init-toolbar.el: Improve flymake toolbar.

	* init-site.el: Setup INCLUDE path for gcc.

2010-12-06  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (org-mode-hook): Don't enable whitespace and
	auto-fill-mode in org.

2010-12-05  Meteor Liu  <meteor1113@gmail.com>
